Blogspot Lite changelog

= Version 1.3 =
* Fixed theme URI
* Removed unnecessary files that are not in-use
* Used the right prefix for functions
* Removed some recommended plugins
* Updated license for fonts
* Removed build-in plugins

= Version 1.2 =
* Fixed PHP notices
* Moved gallery image functionality
* Moved custom CSS/JS to plugin
* Removed theme advertising

= Version 1.1 =
* Using post meta only for visual things
* Moved sidebars functionality to plugin
* Moved Login screen logo to plugin
* Moved widgets to plugin
* Removed required plugin from TGM
* Minor bugfixes

= Version 1.0.2 =
* Updated welcome screen

= Version 1.0 =
* Initial release