@@ -32,7 +32,7 @@ if ( have_posts() ) {
 					<?php
 						global $blogpost_is_in_sidebar;
 						$blogpost_is_in_sidebar = true;
-						generated_dynamic_sidebar();
+						if ( function_exists('generated_dynamic_sidebar') ) { generated_dynamic_sidebar(); }
 					?>
 					<div class="clearfix"></div>
 					</div>
