@@ -89,7 +89,7 @@ $img = wp_get_attachment_image_src( get_post_thumbnail_id(), 'large-image' );
 				<?php
 					global $blogpost_is_in_sidebar;
 					$blogpost_is_in_sidebar = true;
-					generated_dynamic_sidebar();
+					if ( function_exists('generated_dynamic_sidebar') ) { generated_dynamic_sidebar(); }
 				?>
 				<div class="clearfix"></div>
 				</div>
